Project Exercise Solved.

--- a/course-material/Spark_DataFrame_Project_Exercise/Spark DataFrames Project Exercise.ipynb
+++ b/course-material/Spark_DataFrame_Project_Exercise/Spark DataFrames Project Exercise.ipynb
@@ -280,10 +280,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|            HV Ratio|\n",
+      "+--------------------+\n",
+      "|4.819714653321546E-6|\n",
+      "|6.290848613094555E-6|\n",
+      "|4.669412994783916E-6|\n",
+      "|7.367338463826307E-6|\n",
+      "|8.915604778943901E-6|\n",
+      "+--------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = df.withColumn(\"HV Ratio\", df['High']/df['Volume'])\n",
+    "df2.select(\"HV Ratio\").show(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -294,10 +315,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2015, 1, 13, 0, 0)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3 = df.orderBy(df['High'].desc()).head(1)\n",
+    "df3[0][0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -308,10 +343,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|AVG Close|\n",
+      "+---------+\n",
+      "|    72.39|\n",
+      "+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import mean\n",
+    "df.select(format_number(mean(df['Close']),2).alias('AVG Close')).show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -322,17 +373,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql.functions import max, min"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-------+\n",
+      "|     Max|    Min|\n",
+      "+--------+-------+\n",
+      "|80898100|2094900|\n",
+      "+--------+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.select(max('Volume').alias('Max'), min('Volume').alias('Min')).show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -343,10 +411,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----------+\n",
+      "|Open Price|Close Price|\n",
+      "+----------+-----------+\n",
+      "|     89.21|      90.47|\n",
+      "|     89.36|      90.02|\n",
+      "+----------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df4 = df.filter(df['Close'] > 90)\n",
+    "df4 = df4.select(format_number('Open', 2).alias(\"Open Price\"),format_number('Close', 2).alias(\"Close Price\"))\n",
+    "df4.select(\"*\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+\n",
+      "|Total Number|\n",
+      "+------------+\n",
+      "|          81|\n",
+      "+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import count\n",
+    "result = df.filter(df[\"Close\"] < 60)\n",
+    "result.select(count('*').alias('Total Number')).show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -358,10 +468,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.141494435612083"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "high_value = df.filter(df[\"High\"] > 80).count()\n",
+    "total_days = df.count()\n",
+    "result = high_value / total_days * 100\n",
+    "result"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -373,10 +499,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+\n",
+      "| corr(High, Volume)|\n",
+      "+-------------------+\n",
+      "|-0.3384326061737161|\n",
+      "+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import corr\n",
+    "df.select(corr('High', 'Volume')).show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -387,10 +529,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql.functions import year, month\n",
+    "yeardf = df.withColumn(\"Year\", year(df['Date']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-----+\n",
+      "|Year| High|\n",
+      "+----+-----+\n",
+      "|2015|90.97|\n",
+      "|2014|88.09|\n",
+      "|2013|81.37|\n",
+      "|2012|77.60|\n",
+      "|2016|75.19|\n",
+      "+----+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_df = yeardf.groupBy(\"Year\").max()\n",
+    "max_df = max_df.orderBy(max_df[\"max(High)\"].desc())\n",
+    "max_df.select(\"Year\", format_number(max_df[\"max(High)\"], 2).alias('High')).show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -402,10 +575,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---------+\n",
+      "|Month|AVG Close|\n",
+      "+-----+---------+\n",
+      "|    1|    71.45|\n",
+      "|    2|    71.31|\n",
+      "|    3|    71.78|\n",
+      "|    4|    72.97|\n",
+      "|    5|    72.31|\n",
+      "|    6|    72.50|\n",
+      "|    7|    74.44|\n",
+      "|    8|    73.03|\n",
+      "|    9|    72.18|\n",
+      "|   10|    71.58|\n",
+      "|   11|    72.11|\n",
+      "|   12|    72.85|\n",
+      "+-----+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import avg\n",
+    "add_month = df.withColumn(\"Month\", month(df['Date']))\n",
+    "group_by_month = add_month.groupBy(\"Month\").avg()\n",
+    "order_by_month = group_by_month.orderBy(\"avg(Month)\")\n",
+    "order_by_month.select(add_month['Month'], format_number(order_by_month[\"avg(Close)\"], 2).alias('AVG Close')).show()"
+   ]
   },
   {
    "cell_type": "markdown",
