--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "d9e763fa",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "fb34f784",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "12a4b8d6",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "c3785db4",
    "metadata": {},
    "outputs": [
@@ -40,10 +40,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " PySpark.ipynb                                 \u001b[0m\u001b[01;34mcourse-material\u001b[0m/\r\n",
-      "'Spark DataFrame Basic Operations..ipynb'      linear-regression.ipynb\r\n",
-      "'Spark DataFrame Dates and Timestamps.ipynb'   people.json\r\n",
-      "'Spark DataFrame Missing Data.ipynb'           \u001b[01;34mspark-warehouse\u001b[0m/\r\n"
+      " Volume in drive X is M2\n",
+      " Volume Serial Number is 6F19-6450\n",
+      "\n",
+      " Directory of X:\\GitHub\\PySpark\n",
+      "\n",
+      "27/12/2022  11:59    <DIR>          .\n",
+      "27/12/2022  11:59    <DIR>          ..\n",
+      "27/12/2022  11:56                23 .gitignore\n",
+      "27/12/2022  11:59    <DIR>          .ipynb_checkpoints\n",
+      "27/12/2022  11:56    <DIR>          course-material\n",
+      "27/12/2022  11:56            12,152 linear-regression.ipynb\n",
+      "27/12/2022  11:56                74 people.json\n",
+      "27/12/2022  11:59             9,659 PySpark.ipynb\n",
+      "27/12/2022  11:56             9,177 Spark DataFrame Basic Operations..ipynb\n",
+      "27/12/2022  11:56             7,887 Spark DataFrame Dates and Timestamps.ipynb\n",
+      "27/12/2022  11:56             7,290 Spark DataFrame Missing Data.ipynb\n",
+      "27/12/2022  11:58    <DIR>          spark-warehouse\n",
+      "               7 File(s)         46,262 bytes\n",
+      "               5 Dir(s)  172,889,452,544 bytes free\n"
      ]
     }
    ],
@@ -53,25 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "4967a16f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/12/19 13:22:01 WARN LibSVMFileFormat: 'numFeatures' option not specified, determining the number of features by going though the input. If you know the number in advance, please specify it via 'numFeatures' option to avoid the extra scan.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "training = spark.read.format('libsvm').load('course-material/Spark_for_Machine_Learning/Linear_Regression/sample_linear_regression_data.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "2740201d",
    "metadata": {},
    "outputs": [
@@ -114,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "fa01e4a0",
    "metadata": {},
    "outputs": [],
@@ -124,25 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "1cd8ac2a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/12/19 13:36:52 WARN Instrumentation: [3d9f7688] regParam is zero, which might cause numerical instability and overfitting.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lrModel = lr.fit(training)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "0df74abf",
    "metadata": {},
    "outputs": [
@@ -152,7 +151,7 @@
        "DenseVector([0.0073, 0.8314, -0.8095, 2.4412, 0.5192, 1.1535, -0.2989, -0.5129, -0.6197, 0.6956])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "4afe1342",
    "metadata": {},
    "outputs": [
@@ -173,7 +172,7 @@
        "0.14228558260358093"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "2c5be0b7",
    "metadata": {},
    "outputs": [],
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "fc834f75",
    "metadata": {},
    "outputs": [
@@ -204,7 +203,7 @@
        "10.16309157133015"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,25 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "ff4e4be6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/12/19 13:39:50 WARN LibSVMFileFormat: 'numFeatures' option not specified, determining the number of features by going though the input. If you know the number in advance, please specify it via 'numFeatures' option to avoid the extra scan.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_data = spark.read.format('libsvm').load('course-material/Spark_for_Machine_Learning/Linear_Regression/sample_linear_regression_data.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "af5538dd",
    "metadata": {},
    "outputs": [],
@@ -243,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "055edb4f",
    "metadata": {},
    "outputs": [
@@ -256,24 +247,24 @@
       "+-------------------+--------------------+\n",
       "|-28.571478869743427|(10,[0,1,2,3,4,5,...|\n",
       "|-26.805483428483072|(10,[0,1,2,3,4,5,...|\n",
+      "| -23.51088409032297|(10,[0,1,2,3,4,5,...|\n",
       "|-23.487440120936512|(10,[0,1,2,3,4,5,...|\n",
+      "|-22.949825936196074|(10,[0,1,2,3,4,5,...|\n",
+      "|-22.837460416919342|(10,[0,1,2,3,4,5,...|\n",
+      "|-21.432387764165806|(10,[0,1,2,3,4,5,...|\n",
+      "|-20.212077258958672|(10,[0,1,2,3,4,5,...|\n",
+      "|-20.057482615789212|(10,[0,1,2,3,4,5,...|\n",
+      "|-19.872991038068406|(10,[0,1,2,3,4,5,...|\n",
+      "|-19.782762789614537|(10,[0,1,2,3,4,5,...|\n",
       "| -19.66731861537172|(10,[0,1,2,3,4,5,...|\n",
       "| -19.16829262296376|(10,[0,1,2,3,4,5,...|\n",
       "| -18.27521356600463|(10,[0,1,2,3,4,5,...|\n",
       "|-17.803626188664516|(10,[0,1,2,3,4,5,...|\n",
-      "|-17.494200356883344|(10,[0,1,2,3,4,5,...|\n",
-      "| -17.32672073267595|(10,[0,1,2,3,4,5,...|\n",
       "|-17.065399625876015|(10,[0,1,2,3,4,5,...|\n",
       "|-17.026492264209548|(10,[0,1,2,3,4,5,...|\n",
+      "| -16.71909683360509|(10,[0,1,2,3,4,5,...|\n",
       "|-16.692207021311106|(10,[0,1,2,3,4,5,...|\n",
       "| -16.26143027545273|(10,[0,1,2,3,4,5,...|\n",
-      "|-16.151349351277112|(10,[0,1,2,3,4,5,...|\n",
-      "|-15.951512565794573|(10,[0,1,2,3,4,5,...|\n",
-      "| -15.86200932757056|(10,[0,1,2,3,4,5,...|\n",
-      "|-15.780685032623301|(10,[0,1,2,3,4,5,...|\n",
-      "|-15.375857723312297|(10,[0,1,2,3,4,5,...|\n",
-      "|-15.359544879832677|(10,[0,1,2,3,4,5,...|\n",
-      "|-15.334767479922341|(10,[0,1,2,3,4,5,...|\n",
       "+-------------------+--------------------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -286,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "63a03262",
    "metadata": {},
    "outputs": [
@@ -297,9 +288,9 @@
       "+-------+-------------------+\n",
       "|summary|              label|\n",
       "+-------+-------------------+\n",
-      "|  count|                333|\n",
-      "|   mean| 0.5720976685078433|\n",
-      "| stddev|  9.829160888857329|\n",
+      "|  count|                354|\n",
+      "|   mean|0.28672615641035937|\n",
+      "| stddev|  10.24895157163405|\n",
       "|    min|-28.571478869743427|\n",
       "|    max| 27.111027963108548|\n",
       "+-------+-------------------+\n",
@@ -313,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "c786af9b",
    "metadata": {},
    "outputs": [
@@ -324,9 +315,9 @@
       "+-------+-------------------+\n",
       "|summary|              label|\n",
       "+-------+-------------------+\n",
-      "|  count|                168|\n",
-      "|   mean|-0.3679001410322759|\n",
-      "| stddev| 11.228540660557877|\n",
+      "|  count|                147|\n",
+      "|   mean|0.18503565000287292|\n",
+      "| stddev|  10.51704923728102|\n",
       "|    min|-28.046018037776633|\n",
       "|    max|  27.78383192005107|\n",
       "+-------+-------------------+\n",
@@ -340,25 +331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "4e69b406",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/12/19 15:15:08 WARN Instrumentation: [70ece84e] regParam is zero, which might cause numerical instability and overfitting.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "correct_model = lr.fit(train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "dc2baca6",
    "metadata": {},
    "outputs": [],
@@ -368,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "b3020b17",
    "metadata": {},
    "outputs": [
@@ -379,26 +362,26 @@
       "+-------------------+\n",
       "|          residuals|\n",
       "+-------------------+\n",
-      "|-27.844590432339242|\n",
-      "|-22.710924145194333|\n",
-      "|-23.261573559990428|\n",
-      "| -25.73097618246961|\n",
-      "|-19.091538677627874|\n",
-      "| -21.79352409524174|\n",
-      "| -23.84882684965123|\n",
-      "| -21.03854682407178|\n",
-      "|-20.287845307403995|\n",
-      "|-20.583196205691817|\n",
-      "| -21.07825089731563|\n",
-      "|-20.443603307128505|\n",
-      "|-21.967680662502314|\n",
-      "| -19.24691986356833|\n",
-      "|-15.381657671005058|\n",
-      "|-16.003424887491207|\n",
-      "|-17.874102538715185|\n",
-      "|  -17.3446089765876|\n",
-      "|-15.352854770914353|\n",
-      "|-13.376883892620985|\n",
+      "|-27.354393158782923|\n",
+      "| -25.06896888052262|\n",
+      "|-22.088543326704354|\n",
+      "| -19.78926916567116|\n",
+      "| -20.47281370460017|\n",
+      "| -16.51067169890622|\n",
+      "|-17.450863176106562|\n",
+      "|-16.416539605320025|\n",
+      "| -16.58548325459406|\n",
+      "| -16.44007606855426|\n",
+      "|-15.473745761805668|\n",
+      "| -17.02649174787786|\n",
+      "|-13.809186224878824|\n",
+      "|-14.843170237985886|\n",
+      "| -16.93110261310451|\n",
+      "|-14.616291618828756|\n",
+      "| -13.92603225923631|\n",
+      "|-12.244052145373669|\n",
+      "|-12.453966293180468|\n",
+      "|-13.699419689886698|\n",
       "+-------------------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -411,17 +394,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "4b50a266",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11.29564781575681"
+       "10.458275132029565"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,6 +417,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fc3d40d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60371759",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -455,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
