logistic regression consulting project solved

--- a/logistic-regression-2.ipynb
+++ b/logistic-regression-2.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "id": "0bae0431",
    "metadata": {},
    "outputs": [],
@@ -185,8 +185,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "id": "fa9443fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+------+------+----+-----+-----+-------+--------+--------+\n",
+      "|Survived|Pclass|   Sex| Age|SibSp|Parch|   Fare|Embarked|SexIndex|\n",
+      "+--------+------+------+----+-----+-----+-------+--------+--------+\n",
+      "|       0|     3|  male|22.0|    1|    0|   7.25|       S|     0.0|\n",
+      "|       1|     1|female|38.0|    1|    0|71.2833|       C|     1.0|\n",
+      "|       1|     3|female|26.0|    0|    0|  7.925|       S|     1.0|\n",
+      "|       1|     1|female|35.0|    1|    0|   53.1|       S|     1.0|\n",
+      "|       0|     3|  male|35.0|    0|    0|   8.05|       S|     0.0|\n",
+      "|       0|     3|  male|null|    0|    0| 8.4583|       Q|     0.0|\n",
+      "|       0|     1|  male|54.0|    0|    0|51.8625|       S|     0.0|\n",
+      "|       0|     3|  male| 2.0|    3|    1| 21.075|       S|     0.0|\n",
+      "|       1|     3|female|27.0|    0|    2|11.1333|       S|     1.0|\n",
+      "|       1|     2|female|14.0|    1|    0|30.0708|       C|     1.0|\n",
+      "|       1|     3|female| 4.0|    1|    1|   16.7|       S|     1.0|\n",
+      "|       1|     1|female|58.0|    0|    0|  26.55|       S|     1.0|\n",
+      "|       0|     3|  male|20.0|    0|    0|   8.05|       S|     0.0|\n",
+      "|       0|     3|  male|39.0|    1|    5| 31.275|       S|     0.0|\n",
+      "|       0|     3|female|14.0|    0|    0| 7.8542|       S|     1.0|\n",
+      "|       1|     2|female|55.0|    0|    0|   16.0|       S|     1.0|\n",
+      "|       0|     3|  male| 2.0|    4|    1| 29.125|       Q|     0.0|\n",
+      "|       1|     2|  male|null|    0|    0|   13.0|       S|     0.0|\n",
+      "|       0|     3|female|31.0|    1|    0|   18.0|       S|     1.0|\n",
+      "|       1|     3|female|null|    0|    0|  7.225|       C|     1.0|\n",
+      "+--------+------+------+----+-----+-----+-------+--------+--------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "indexed_df = gender_indexer.fit(my_cols).transform(my_cols)\n",
+    "indexed_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "67002819",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+------+------+----+-----+-----+-------+--------+--------+-------------+\n",
+      "|Survived|Pclass|   Sex| Age|SibSp|Parch|   Fare|Embarked|SexIndex|       SexVec|\n",
+      "+--------+------+------+----+-----+-----+-------+--------+--------+-------------+\n",
+      "|       0|     3|  male|22.0|    1|    0|   7.25|       S|     0.0|(1,[0],[1.0])|\n",
+      "|       1|     1|female|38.0|    1|    0|71.2833|       C|     1.0|    (1,[],[])|\n",
+      "|       1|     3|female|26.0|    0|    0|  7.925|       S|     1.0|    (1,[],[])|\n",
+      "|       1|     1|female|35.0|    1|    0|   53.1|       S|     1.0|    (1,[],[])|\n",
+      "|       0|     3|  male|35.0|    0|    0|   8.05|       S|     0.0|(1,[0],[1.0])|\n",
+      "|       0|     3|  male|null|    0|    0| 8.4583|       Q|     0.0|(1,[0],[1.0])|\n",
+      "|       0|     1|  male|54.0|    0|    0|51.8625|       S|     0.0|(1,[0],[1.0])|\n",
+      "|       0|     3|  male| 2.0|    3|    1| 21.075|       S|     0.0|(1,[0],[1.0])|\n",
+      "|       1|     3|female|27.0|    0|    2|11.1333|       S|     1.0|    (1,[],[])|\n",
+      "|       1|     2|female|14.0|    1|    0|30.0708|       C|     1.0|    (1,[],[])|\n",
+      "|       1|     3|female| 4.0|    1|    1|   16.7|       S|     1.0|    (1,[],[])|\n",
+      "|       1|     1|female|58.0|    0|    0|  26.55|       S|     1.0|    (1,[],[])|\n",
+      "|       0|     3|  male|20.0|    0|    0|   8.05|       S|     0.0|(1,[0],[1.0])|\n",
+      "|       0|     3|  male|39.0|    1|    5| 31.275|       S|     0.0|(1,[0],[1.0])|\n",
+      "|       0|     3|female|14.0|    0|    0| 7.8542|       S|     1.0|    (1,[],[])|\n",
+      "|       1|     2|female|55.0|    0|    0|   16.0|       S|     1.0|    (1,[],[])|\n",
+      "|       0|     3|  male| 2.0|    4|    1| 29.125|       Q|     0.0|(1,[0],[1.0])|\n",
+      "|       1|     2|  male|null|    0|    0|   13.0|       S|     0.0|(1,[0],[1.0])|\n",
+      "|       0|     3|female|31.0|    1|    0|   18.0|       S|     1.0|    (1,[],[])|\n",
+      "|       1|     3|female|null|    0|    0|  7.225|       C|     1.0|    (1,[],[])|\n",
+      "+--------+------+------+----+-----+-----+-------+--------+--------+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "encoded_df = gender_encoder.fit(indexed_df).transform(indexed_df)\n",
+    "encoded_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
-   "id": "a61ee082",
+   "id": "6bf9edf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "cb438580",
+   "id": "23cd4711",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b7439f16",
+   "id": "7a01ba88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "079a85d9",
+   "id": "3b987974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f7c9a071",
+   "id": "26637f88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "28c12284",
+   "id": "4d129da8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "dbdcd4f2",
+   "id": "06f2b957",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4aa21c06",
+   "id": "bba36703",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b93f8d60",
+   "id": "4d6865dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d9891122",
+   "id": "ff982c2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,29 +384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "15de92dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pyspark.sql.dataframe.DataFrame"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 42,
-   "id": "f3abe20d",
+   "id": "4318aa1d",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5a590319",
+   "id": "8be6cbdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ea7c3271",
+   "id": "eb15b83f",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa21bbc2",
+   "id": "b71931a8",
    "metadata": {},
    "outputs": [],
    "source": []
