logistic reg consulting project update

--- a/logistic-regression-consulting-project.ipynb
+++ b/logistic-regression-consulting-project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1ccae1b5",
+   "id": "a3e85a91",
    "metadata": {},
    "source": [
     "# Logistic Regression Consulting Project"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "544ac2a7",
+   "id": "6cbb528a",
    "metadata": {},
    "source": [
     "## Binary Customer Churn\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d89ae52b",
+   "id": "80760b7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c8368d58",
+   "id": "badd4922",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "87e51486",
+   "id": "7b484923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b8da89a5",
+   "id": "2837ba17",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ab64d9bc",
+   "id": "e23a80e4",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e7a3a213",
+   "id": "a7d4047f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "5329dbaf",
+   "id": "7a2a05ba",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "34436dc1",
+   "id": "dfe6922e",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f8e2bd25",
+   "id": "a986f9ed",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "a409e3f3",
+   "id": "e9ac0ecd",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c8126782",
+   "id": "95591e74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "98809ccb",
+   "id": "41407176",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a61f34fd",
+   "id": "fad914c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "920c4270",
+   "id": "e720544e",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a3dd9660",
+   "id": "720068e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "1ac72adf",
+   "id": "2194926d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "c6d884a1",
+   "id": "548cfd6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "2f0b52ff",
+   "id": "91b80af9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "8eaa05db",
+   "id": "b6f9ea20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0ad2e5c8",
+   "id": "a75765cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "c0f6c068",
+   "id": "09ff2aa5",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "db77c892",
+   "id": "60efc2bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0ba01045",
+   "id": "7f009e47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "42a00317",
+   "id": "4fb58db1",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0855ea80",
+   "id": "35af9031",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "7726ebea",
+   "id": "a6ae08d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "6df61895",
+   "id": "a954ff24",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9faa9a66",
+   "id": "6861f907",
    "metadata": {},
    "source": [
     "### Predict on New Data"
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "e1e8664a",
+   "id": "02dde9b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "188e272a",
+   "id": "f921c66f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "bdddf690",
+   "id": "1b9b25d0",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f72acf99",
+   "id": "be0127f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "6dcf9c1e",
+   "id": "28dfac78",
    "metadata": {},
    "outputs": [
     {
@@ -623,13 +623,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e3a08994",
+   "execution_count": 69,
+   "id": "aed8b000",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_results = final_lr_model.transform()"
+    "final_results = final_lr_model.transform(test_new_customers)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "6c93d829",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+----------+\n",
+      "|         Company|prediction|\n",
+      "+----------------+----------+\n",
+      "|        King Ltd|       0.0|\n",
+      "|   Cannon-Benson|       1.0|\n",
+      "|Barron-Robertson|       1.0|\n",
+      "|   Sexton-Golden|       1.0|\n",
+      "|        Wood LLC|       0.0|\n",
+      "|   Parks-Robbins|       1.0|\n",
+      "+----------------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_results.select('Company','prediction').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "5ebe67b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-------------+------------------+-----------------+------------------+-----------------+------------------+--------------------+----------------+\n",
+      "|summary|        Names|               Age|   Total_Purchase|   Account_Manager|            Years|         Num_Sites|            Location|         Company|\n",
+      "+-------+-------------+------------------+-----------------+------------------+-----------------+------------------+--------------------+----------------+\n",
+      "|  count|            6|                 6|                6|                 6|                6|                 6|                   6|               6|\n",
+      "|   mean|         null|35.166666666666664|7607.156666666667|0.8333333333333334|6.808333333333334|12.333333333333334|                null|            null|\n",
+      "| stddev|         null| 15.71517313511584|4346.008232825459| 0.408248290463863|3.708737880555414|3.3862466931200785|                null|            null|\n",
+      "|    min|Andrew Mccall|              22.0|            100.0|                 0|              1.0|               8.0|085 Austin Views ...|Barron-Robertson|\n",
+      "|    max| Taylor Young|              65.0|         13147.71|                 1|             10.0|              15.0|Unit 0789 Box 073...|        Wood LLC|\n",
+      "+-------+-------------+------------------+-----------------+------------------+-----------------+------------------+--------------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_new_customers.describe().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e41af3f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
